--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
                 </div>
             </div>
             <p class="font-medium text-xs text-slate-500 text-center">Dibut dengan <span class="text-pink-500">❤️</span> Oleh <a href="https://instagram.com/ghazthiskc" target="_blank" class="font-bold text-primary">Muhammad Ghazy Humaidi</a>, menggunakan <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a></p>
+            <p id="tahun" class="text-center text-xs text-slate-500">Copyright © <span></span></p>
         </div>
      </footer>
     <!-- FOOTER SECTION END -->
