--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Ghazy Humaidi | Portfolio Tailwind CSS</title>
     <link rel="stylesheet" href="./dist/css/final.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
     <meta name="google-site-verification" content="v5vhgtWsQ0k4wTP4bQX3xoLz8I7gkyx48SxhrZ5H9fw" />
     <script>
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
